--- a/website_blog_private/views/website_blog_private_views.xml
+++ b/website_blog_private/views/website_blog_private_views.xml
@@ -1,18 +1,43 @@
-<?xml version="1.0"?>
+<?xml version="1.0" encoding="utf-8"?>
 <openerp>
     <data>
-
-        <record model="ir.ui.view" id="view_blog_blog_private_form">
-            <field name="name">blog.blog.private.form</field>
+        <record id="view_blog_blog_form" model="ir.ui.view">
+            <field name="name">blog.blog.form.inherited.website_blog_private</field>
             <field name="model">blog.blog</field>
-            <field name="inherit_id" ref="website_blog.view_blog_blog_form" />
+            <field name="inherit_id" ref="website_blog.view_blog_blog_form"/>
             <field name="arch" type="xml">
-                <xpath expr="//field[@name='description']" position="after">
+                <field name="description" position="after">
                     <field name="security_type"/>
                     <field name="group_ids" widget="many2many_tags" attrs="{'invisible': [('security_type','=','public')]}"/>
-                </xpath>
+                </field>
             </field>
         </record>
+
+        <record id="view_blog_post_form" model="ir.ui.view">
+            <field name="name">blog.post.form.inherited.website_blog_private</field>
+            <field name="model">blog.post</field>
+            <field name="inherit_id" ref="website_blog.view_blog_post_form"/>
+            <field name="arch" type="xml">
+                <field name="blog_id" position="after">
+                    <field name="security_type"/>
+                    <field name="group_ids" widget="many2many_tags" attrs="{'invisible': [('security_type','=','public')]}"/>
+                </field>
+            </field>
+        </record>
+
+        <template id="blog_authorization" name="Blog Authorization">
+            <div class="css_non_editable_mode_hidden">
+                <t t-if="blog_post.security_type == 'public'">
+                    <h3 class="text-success">Public</h3>
+                </t>
+                <t t-if="blog_post.security_type == 'private'">
+                    <h3 class="text-danger">Private</h3>
+                    <ul t-foreach="blog_post.group_ids" t-as="group">
+                        <li class="text-danger"><t t-esc="group.name"/></li>
+                    </ul>
+                </t>
+            </div>
+        </template>
 
     </data>
 </openerp>
