--- a/product_private/views/product_private_views.xml
+++ b/product_private/views/product_private_views.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<openerp>
+<odoo>
     <data>
 
         <record id="access_groups_product_template_form_view" model="ir.ui.view">
@@ -23,6 +23,19 @@
                 </field>
             </field>
         </record>
+        
+        <record id="product_public_category_form_view" model="ir.ui.view">
+            <field name="name">product.public.category.form</field>
+            <field name="model">product.public.category</field>
+            <field name="inherit_id" ref="website_sale.product_public_category_form_view" />
+            <field name="arch" type="xml">
+                <field name="parent_id" position="after">
+                    <field name="access_group_ids" widget="many2many_tags"/>
+                </field>
+            </field>
+        </record>
+        
+        
 
         <!-- res partner -->
         <record id="view_partner_form" model="ir.ui.view">
@@ -37,4 +50,4 @@
         </record>
 
     </data>
-</openerp>
+</odoo>
